# tetris42

./: CMakeLists.txt  LICENSE  README.md  tetris42.c  tetris42.rc
